<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center">

    <LinearLayout android:layout_width="825px" android:layout_height="315px"
	 android:orientation="vertical">
        
        	<com.tcl.common.mediaplayer.utils.TypefaceTextView android:layout_width="825px" android:id="@+id/text" android:background="@drawable/bg_settings_top"
		android:layout_height="100px" android:text="@string/AdvancedSet"
		android:textColor="#ebebeb" android:textSize="45px" android:gravity="center"
		android:layout_gravity="center" />

	<LinearLayout android:id="@+id/advanceMenu "  android:background="@drawable/bg_settings_bottom"
		android:layout_width="fill_parent" android:layout_height="215px"
		android:orientation="vertical" android:gravity="center_horizontal" >
		<LinearLayout android:id="@+id/subtitle"  android:focusable="true" android:background="@drawable/list_item_back"
			android:layout_width="fill_parent" android:layout_height="90px"  
			android:orientation="horizontal"  android:gravity="center_vertical" android:paddingBottom="7px"
			android:layout_marginTop="10px">
			<com.tcl.common.mediaplayer.utils.TypefaceTextView android:layout_width="330px" android:id="@+id/sub_title"
				android:layout_height="wrap_content" android:text="@string/subtitle"
				android:textColor="#ebebeb" android:textSize="36px" android:gravity="center" />

			<ImageView android:layout_width="wrap_content"   android:gravity="center"
				android:layout_height="wrap_content" android:src="@drawable/choose_left" />
			<com.tcl.common.mediaplayer.utils.TypefaceTextView android:id="@+id/sub_text" android:layout_width="345px"    
				android:layout_height="wrap_content" android:textColor="#000000" 
				android:textSize="36px" android:gravity="center"/>

			<ImageView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:src="@drawable/choose_right"  />

		</LinearLayout>
		<LinearLayout android:id="@+id/audioTrack"   android:focusable="true"
			android:layout_width="fill_parent" android:layout_height="90px"  android:background="@drawable/list_item_back"
			android:orientation="horizontal" android:gravity="center_vertical" android:paddingBottom="7px">
			<com.tcl.common.mediaplayer.utils.TypefaceTextView android:layout_width="330px"  android:id="@+id/track_title"
				android:layout_height="wrap_content" android:text="@string/audioTrack" 
				android:textColor="#ebebeb" android:textSize="36px" android:gravity="center" />

			<ImageView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:src="@drawable/choose_left" />
			<com.tcl.common.mediaplayer.utils.TypefaceTextView android:id="@+id/track_text" android:layout_width="345px" 
				android:layout_height="wrap_content" android:textColor="#000000"  
				android:textSize="36px" android:gravity="center" />

			<ImageView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:src="@drawable/choose_right" />
		</LinearLayout>



	</LinearLayout>
    </LinearLayout>







</LinearLayout>
