<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="845px"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_control_bottom"
        android:orientation="vertical" >

        <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
            android:id="@+id/text"
            android:layout_width="845px"
            android:layout_height="80px"
            android:layout_marginLeft="46px"
            android:gravity="left|center_vertical"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/video_info"
            android:textColor="#838488"
            android:textSize="28px" />

        <LinearLayout
            android:id="@+id/advanceMenu "
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="47px"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="82px"
                android:orientation="horizontal" >

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:layout_width="220px"
                    android:layout_height="82px"
                    android:layout_marginLeft="46px"
                    android:gravity="center_vertical|left"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
            		android:text="@string/video_name" 
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:id="@+id/info_videoname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:layout_marginRight="46px"
                    android:gravity="center_vertical|right"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
            		android:text="@string/audio_info_unknown"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="82px"
                android:orientation="horizontal" >

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:layout_width="220px"
                    android:layout_height="82px"
                    android:layout_marginLeft="46px"
                    android:gravity="center_vertical|left"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/video_size"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:id="@+id/info_videosize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:layout_marginRight="46px"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:gravity="center_vertical|right"
                    android:text="@string/audio_info_unknown"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="82px"
                android:orientation="horizontal" >

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:layout_width="220px"
                    android:layout_height="82px"
                    android:layout_marginLeft="46px"
                    android:gravity="center_vertical|left"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/video_code"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:id="@+id/info_videocode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:layout_marginRight="46px"
                    android:gravity="center_vertical|right"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/audio_info_unknown"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="82px"
                android:orientation="horizontal"
                android:visibility="gone" >

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:layout_width="220px"
                    android:layout_height="82px"
                    android:layout_marginLeft="46px"
                    android:gravity="center_vertical|left"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/video_rate"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:id="@+id/info_videorate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:layout_marginRight="46px"
                    android:gravity="center_vertical|right"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/audio_info_unknown"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="82px"
                android:orientation="horizontal" >

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:layout_width="220px"
                    android:layout_height="82px"
                    android:layout_marginLeft="46px"
                    android:gravity="center_vertical|left"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/video_resolution"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />

                <com.tcl.common.mediaplayer.video.UI.ScrollingTextView
                    android:id="@+id/info_videoresolution"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:layout_marginRight="46px"
                    android:gravity="center_vertical|right"
                    android:ellipsize="marquee"
            		android:marqueeRepeatLimit="marquee_forever"
            		android:singleLine="true"
                    android:text="@string/audio_info_unknown"
                    android:textColor="#c5c7d0"
                    android:textSize="34px" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>